L10n for bug 121647 - POP/IMAP server passwords are inappropriately forgotten.

--- a/sv-SE/mail/chrome/messenger/imapMsgs.properties
+++ b/sv-SE/mail/chrome/messenger/imapMsgs.properties
@@ -38,6 +38,13 @@
 #
 # ***** END LICENSE BLOCK *****
 
+imapLoginFailedTitle=Inloggning misslyckades
+# LOCALIZATION NOTE (imapLoginFailed): Insert "%S" in your translation where
+# you wish to display the hostname of the server to which login failed.
+imapLoginFailed=Inloggning till servern %S misslyckades.
+imapLoginFailedRetryButton=&Försök igen
+imapLoginFailedEnterNewPasswordButton=&Ange nytt lösenord
+
 #
 # The following are used by the imap code to display progress/status/error messages
 #
