--- a/pl/suite/chrome/mailnews/imapMsgs.properties
+++ b/pl/suite/chrome/mailnews/imapMsgs.properties
@@ -35,6 +35,13 @@
 #
 # ***** END LICENSE BLOCK *****
 
+imapLoginFailedTitle=Nieudane logowanie
+# LOCALIZATION NOTE (imapLoginFailed): Insert "%S" in your translation where
+# you wish to display the hostname of the server to which login failed.
+imapLoginFailed=Logowanie na serwerze %S nie powiodło się.
+imapLoginFailedRetryButton=&Spróbuj ponownie
+imapLoginFailedEnterNewPasswordButton=&Podaj nowe hasło
+
 #
 # The following are used by the imap code to display progress/status/error messages
 #
@@ -146,10 +153,6 @@
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
 5032=Treść wiadomości zostanie pobrana na żądanie.
-
-## @name IMAP_LOGIN_FAILED
-## @loc None
-5035=Logowanie na serwerze %S nie powiodło się.
 
 ## @name IMAP_RECEIVING_MESSAGE_HEADERS_OF
 ## @loc None
