Aviary.pl bug 2505 - change three dots to ellipsis; mobile part r=zbraniecki

--- a/pl/mobile/chrome/browser.properties
+++ b/pl/mobile/chrome/browser.properties
@@ -6,7 +6,7 @@ editBookmarkNewFolder=Nowy folder
 addonsRestart=Uruchom ponownie, by dokończyć instalację
 addonsRestartButton.label=Uruchom ponownie
 addonsLocalNone.label=Brak zainstalowanych dodatków
-addonsSearchStart.label=Trwa szukanie dodatków...
+addonsSearchStart.label=Trwa szukanie dodatków…
 addonsSearchStart.button=Anuluj
 addonsSearchNone.label=Brak wyników
 addonsSearchNone.button=OK
