Aviary.pl bug 2505 - change three dots to ellipsis; tk part r=marcoos

--- a/pl/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/pl/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -39,7 +39,7 @@
 # ***** END LICENSE BLOCK *****
 
 title=Otwieranie %S
-saveDialogTitle=Wprowadź nazwę pliku...
+saveDialogTitle=Wprowadź nazwę pliku…
 defaultApp=%S (domyślny)
 chooseAppFilePickerTitle=Wybierz aplikację pomocniczą
 badApp=Wybrana aplikacja ("%S") nie może zostać odnaleziona. Należy sprawdzić poprawność wprowadzonej nazwy pliku lub wybrać inną aplikację.
