--- a/pl/toolkit/chrome/mozapps/extensions/update.properties
+++ b/pl/toolkit/chrome/mozapps/extensions/update.properties
@@ -8,7 +8,7 @@ nextButtonText=Dalej >
 nextButtonTextAccesskey=D
 cancelButtonText=Anuluj
 cancelButtonTextAccesskey=A
-statusPrefix=Zakończono sprawdzanie elementu %S...
+statusPrefix=Zakończono sprawdzanie elementu %S…
 downloadingPrefix=Pobieranie: %S
 installingPrefix=Instalacja: %S
 closeButton=Zamknij
