--- a/fr/mail/chrome/messenger/eudoraImportMsgs.properties
+++ b/fr/mail/chrome/messenger/eudoraImportMsgs.properties
@@ -61,21 +61,21 @@
 # Error message
 ## @name EUDORAIMPORT_MAILBOX_BADPARAM
 ## @loc None
-2003=Paramètre invalide passé pour importer la boîte aux lettres.
+2003=Les paramètres d'importation de la boîte aux lettres sont incorrects.
 
 # Error message
 ## @name EUDORAIMPORT_MAILBOX_BADSOURCEFILE
 ## @loc None
 # LOCALIZATION NOTE (2004): In the following sentence, do not translate the "%S". Instead,
 # place it in your sentence where you wish to display the name of the mailbox.
-2004=Erreur en accédant au fichier de la boîte aux lettres %S.
+2004=Erreur lors de l'accès à un fichier de votre boîte aux lettres %S.
 
 # Error message
 ## @name EUDORAIMPORT_MAILBOX_CONVERTERROR
 ## @loc None
 # LOCALIZATION NOTE (2005): In the following sentence, do not translate the "%S". Instead,
 # place it in your sentence where you wish to display the name of the mailbox.
-2005=Erreur en important la boîte aux lettres %S, il est possible que certains messages n'aient pas été importés.
+2005=Erreur lors de l'importation de votre boîte aux lettres %S : certains messages risquent de ne pas avoir été récupérés lors de cette opération.
 
 # Description
 ## @name EUDORAIMPORT_ACCOUNTNAME
@@ -94,12 +94,12 @@
 ## @loc None
 # LOCALIZATION NOTE (2008): In the following sentence, do not translate the "%S". Instead,
 # place it in your sentence where you wish to display the name of the address book.
-2008=Importation du carnet d'adresses %S réussie.
+2008=Carnet d'adresses %S importé
 
 # Error message
 ## @name EUDORAIMPORT_ADDRESS_BADPARAM
 ## @loc None
-2009=Paramètre invalide passé pour importer le carnet d'adresses.
+2009=Les paramètres d'importation du carnet d'adresses sont incorrects.
 
 # Error message
 ## @name EUDORAIMPORT_ADDRESS_BADSOURCEFILE
@@ -113,7 +113,7 @@
 ## @loc None
 # LOCALIZATION NOTE (2011): In the following sentence, do not translate the "%S". Instead,
 # place it in your sentence where you wish to display the name of the address book.
-2011=Erreur en important le carnet d'adresses %S. Il est possible que certaines adresses n'aient pas été importées.
+2011=Erreur lors de l'importation de votre carnet d'adresses %S : certaines adresses risquent de ne pas avoir été récupérées lors de cette opération.
 
 # Description
 ## @name EUDORAIMPORT_ADDRESS_LABEL_HOMEMOBILE
