--- a/fr/mail/chrome/messenger/comm4xMailImportMsgs.properties
+++ b/fr/mail/chrome/messenger/comm4xMailImportMsgs.properties
@@ -53,7 +53,7 @@
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
 ## @name COMM4XMAILIMPORT_MAILBOX_SUCCESS
 ## @loc None
-2002=Les messages locaux ont été importés correctement depuis %S.
+2002=Les messages locaux ont été importés avec succès depuis %S.
 
 # Error Message
 ## @name COMM4XMAILIMPORT_MAILBOX_BADPARAM
