--- a/fr/mail/chrome/messenger/vcard.properties
+++ b/fr/mail/chrome/messenger/vcard.properties
@@ -42,7 +42,7 @@
 # Out of memory
 ## @name VCARD_OUT_OF_MEMORY
 ## @loc None
--1000=Plus de mémoire disponible.
+-1000=Mémoire saturée.
 
 # VCARD_LDAP_REGION
 ## @name VCARD_LDAP_REGION
