Update nb-NO mail l10n

--- a/nb-NO/mail/chrome/messenger/activity.properties
+++ b/nb-NO/mail/chrome/messenger/activity.properties
@@ -45,8 +45,8 @@ autosyncEventStatusTextNoMsgs=Ingen meldinger lastet ned
 autosyncContextDisplayText=Synkroniserer: %S
 
 # Message actions that show up in activity manager
-# LOCALIZATION NOTE (deletedMessages): #1 number of messages
-deletedMessages=Slettet #1 melding;Slettet #1 meldinger
+# LOCALIZATION NOTE (deletedMessages2): #1 number of messages, #2 folder name
+deletedMessages2=Slettet #1 melding fra #2;Slettet #1 meldinger fra #2
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
 movedMessages=Flyttet #1 melding fra #2 til #3;Flyttet #1 meldinger fra #2 til #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
