--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -482,6 +482,10 @@ fileNotFoundTitle = Fant ikke filen
 #LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
 fileNotFoundMsg = Filen %S eksisterer ikke.
 
+fileEmptyTitle = Filen er tom
+#LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
+fileEmptyMsg = Filen %S er tom.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=Deg
