--- a/nb-NO/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/nb-NO/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -280,11 +280,14 @@ subjectEmptyMessage=Meldingen har ikke noe emne.
 sendWithEmptySubjectButton=&Send meldingen uten emne
 cancelSendingButton=&Avbryt sending
 
-## String used by the dialog that informs the user about the newsgroup recipient
+## Strings used by the dialog that informs about lack of newsgroup support.
+noNewsgroupSupportTitle=Nyhetsgruppen støttes ikke
 recipientDlogMessage=Denne kontoen støtter bare e-postmottakere. Dersom du fortsetter vil nyhetsgrupper bli utelatt.
 
-#String used by the alert that tells the user an e-mail address is invalid
+## Strings used by the alert that tells the user an e-mail address is invalid.
+addressInvalidTitle=Ugyldig mottakeradresse
 addressInvalid=%1$S er ikke en gyldig e-postadresse, fordi den er ikke på formen bruker@vert. Du må korrigere den før du sender e-posten.
+
 ## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle=Velg et nettsted for å legge ved
 attachPageDlogMessage=Nettside (URL):
