--- a/nb-NO/mail/chrome/messenger/imapMsgs.properties
+++ b/nb-NO/mail/chrome/messenger/imapMsgs.properties
@@ -35,6 +35,13 @@
 #
 # ***** END LICENSE BLOCK *****
 
+imapLoginFailedTitle=Innlogging feilet
+# LOCALIZATION NOTE (imapLoginFailed): Insert "%S" in your translation where
+# you wish to display the hostname of the server to which login failed.
+imapLoginFailed=Innlogging til tjeneren %S feilet.
+imapLoginFailedRetryButton=&Prøv igjen
+imapLoginFailedEnterNewPasswordButton=&Skriv inn nytt passord
+
 #
 # The following are used by the imap code to display progress/status/error messages
 #
@@ -130,27 +137,6 @@
 ## @loc None
 5015=Laster ned melding …
 
-## @name IMAP_STATUS_GETTING_NAMESPACE
-## @loc None
-# LOCALIZATION NOTE (Error 5020): Do not translate the word "IMAP" below.
-5020=Kontrollerer IMAP-navnerom …
-
-## @name IMAP_UPGRADE_NO_PERSONAL_NAMESPACE
-## @loc None
-5021="E-posttjeneren kunne ikke finne noen personlige meldingsmapper. Kontroller innmeldinger.
-
-## @name IMAP_UPGRADE_PROMPT_USER_2
-## @loc None
-5024=Mapper som du ikke melder deg på vil ikke vises i mappelista, men du kan melde deg på disse senere ved å velge Fil / Meld inn
-
-## @name IMAP_UPGRADE_CUSTOM
-## @loc None
-5026=Velg mappene du vil melde deg på i Innmeldings-vinduet …
-
-## @name IMAP_UPGRADE_SUCCESSFUL
-## @loc None
-5028=Oppgraderingen var vellykket.
-
 ## @name IMAP_GETTING_ACL_FOR_FOLDER
 ## @loc None
 # LOCALIZATION NOTE (Error 5029): Do not translate the word "ACL" below.
@@ -167,20 +153,6 @@
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
 5032=Meldingsteksten vil bli nedlastet etter behov.
-
-## @name IMAP_UNABLE_TO_SAVE_MESSAGE
-## @loc None
-# LOCALIZATION NOTE (Error 5033): Do not translate the word "IMAP" below.
-5033=IMAP-feil\: Meldingen kunne ikke bli lagret pga. en feil.
-
-## @name IMAP_NO_ONLINE_FOLDER
-## @loc None
-# LOCALIZATION NOTE (Error 5034): Do not translate the word "IMAP" below.
-5034=IMAP-feil\: Mappeinformasjon kunne ikke bli nedlastet.
-
-## @name IMAP_LOGIN_FAILED
-## @loc None
-5035=Innlogging til tjeneren %S feilet.
 
 ## @name IMAP_RECEIVING_MESSAGE_HEADERS_OF
 ## @loc None
@@ -227,12 +199,6 @@
 # LOCALIZATION NOTE (Error 5043): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
 5043=Kopierer melding til %S …
-
-## @name IMAP_SELECTING_MAILBOX
-## @loc None
-# LOCALIZATION NOTE (Error 5044): Do not translate the word "%S" below.
-# Place the word %S in your translation where the name of the folder should appear.
-5044=Åpner mappe %S …
 
 ## @name IMAP_FOLDER_RECEIVING_MESSAGE_OF
 ## @loc None
@@ -380,10 +346,6 @@
 ## @loc None
 5082=Administrer mapper
 
-## @name IMAP_UNKNOWN_USER
-## @loc None
-5083=Ukjent
-
 ## @name IMAP_SERVER_DOESNT_SUPPORT_ACL
 ## @loc None
 5084=Denne tjeneren støtter ikke delte mapper.
@@ -395,10 +357,6 @@
 ## @name IMAP_SERVER_DISCONNECTED
 ## @loc None
 5090= Tjeneren %S har koblet fra. Tjeneren kan ha blitt slått av, eller et nettverksproblem kan ha oppstått.
-
-## @name IMAP_REDIRECT_LOGIN_FAILED
-## @loc None
-5091=Innlogging feilet.
 
 # LOCALIZATION NOTE (autoSubscribeText): %1$S is the imap folder.
 5092=Vil du melde deg på %1$S?
@@ -436,10 +394,6 @@
 # Place the word %2$S where the total number of messages should appear.
 5103=Kopierer melding %1$S av %2$S til %3$S
 
-## @name IMAP_LOGIN_DISABLED
-## @loc None
-5104=Du kan ikke logge inn på %S, fordi tjeneren tillater ikke innlogging. Du må kanskje logge inn via SSL eller TLS. Kontroller kontoinnstillingene for e-posttjeneren.
-
 ## @name IMAP_MOVE_FOLDER_TO_TRASH
 ## @loc None
 # LOCALIZATION NOTE (5105): Do not translate the word %S below.
@@ -459,3 +413,8 @@
 ## @name IMAP_DELETE_FOLDER_BUTTON_LABEL
 ## @loc None
 5108=&Slett mappe
+
+## @name IMAP_LOGIN_DISABLED
+## @loc None
+# LOCALIZATION NOTE (5109): %S is the server address
+5109=Du kan ikke logge inn på %S fordi tjeneren ikke tillater autentisering i ren tekst, uten at STARTTLS eller SSL/TLS brukes. Prøv å slå på sikker tilkobling eller sikker autentisering i kontoinnstillingene.
