Update nb-NO l10n

--- a/nb-NO/mail/chrome/messenger/preferences/preferences.properties
+++ b/nb-NO/mail/chrome/messenger/preferences/preferences.properties
@@ -15,7 +15,7 @@ confirmResetJunkTrainingText=Er du sikker på at du vil tilbakestille opplærte 
 #### Downloads
 desktopFolderName=Skrivebord
 myDownloadsFolderName=Mine nedlastinger
-chooseDownloadFolderTitle=Velg nedlastingsmappe:
+chooseAttachmentsFolderTitle=Velg mappe
 
 #### Applications
 
