New strings, typos, and other changes

--- a/cs/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/cs/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -149,6 +149,12 @@ monthlyDayOfNth=%1$S. den v každém měsíci;%1$S. den v každém #2. měsíci;
 # e.g. "the last day of every 3 months"
 monthlyLastDayOfNth=poslední den v měsíci;poslední den každý #1. měsíc;poslední den každý #1. měsíc
 
+# LOCALIZATION NOTE (monthlyEveryDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# #2 - month interval
+# e.g. "every day of the month every 4 months"
+monthlyEveryDayOfNth=každý den v měsící každý měsíc;každý den v měsící každý #2. měsíc;každý den v měsící každý #2. měsíc
+
 # LOCALIZATION NOTE (repeatOrdinal...Nounclass...):
 # Ordinal numbers nouns for every noun class (grammatical genders) of weekdays
 # considered in 'repeatDetailsDayxNounclass' strings. For languages that need
