--- a/cs/mail/chrome/messenger/activity.properties
+++ b/cs/mail/chrome/messenger/activity.properties
@@ -46,7 +46,7 @@ autosyncContextDisplayText=Aktualizace složky %S
 
 # Message actions that show up in activity manager
 # LOCALIZATION NOTE (deletedMessages): #1 number of messages
-deletedMessages=Smazána #1 zpráva;Smazány #1 zprávy;Smazáno #1 zpráv
+deletedMessages2=Smazána #1 zpráva z #2;Smazány #1 zprávy z #2;Smazáno #1 zpráv z #2
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
 movedMessages=Přesunuta #1 zpráva #2 z #3;Přesunuty #1 zprávy #2 z #3;Přesunuto #1 zpráv #2 z #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
