--- a/cs/mail/chrome/messenger/imapMsgs.properties
+++ b/cs/mail/chrome/messenger/imapMsgs.properties
@@ -35,6 +35,13 @@
 #
 # ***** END LICENSE BLOCK *****
 
+imapLoginFailedTitle=Chyba přihlášení
+# LOCALIZATION NOTE (imapLoginFailed): Insert "%S" in your translation where
+# you wish to display the hostname of the server to which login failed.
+imapLoginFailed=Přihlášení na server %S skončilo chybou.
+imapLoginFailedRetryButton=&Opakovat
+imapLoginFailedEnterNewPasswordButton=&Vložit nové heslo
+
 #
 # The following are used by the imap code to display progress/status/error messages
 #
@@ -130,27 +137,6 @@
 ## @loc None
 5015=Stahování zprávy…
 
-## @name IMAP_STATUS_GETTING_NAMESPACE
-## @loc None
-# LOCALIZATION NOTE (Error 5020): Do not translate the word "IMAP" below.
-5020=Zjišťování jmenných prostorů IMAP…
-
-## @name IMAP_UPGRADE_NO_PERSONAL_NAMESPACE
-## @loc None
-5021=Poštovní server oznámil, že nemáte žádnou osobní složku s poštou. Prosím zkontrolujte své přihlášení.
-
-## @name IMAP_UPGRADE_PROMPT_USER_2
-## @loc None
-5024=Všechny složky, které nebudou přihlášeny k odběru se neobjeví ve výpisu složek, ale lze je přihlásit i později pomocí Soubor / Přihlásit k odběru.
-
-## @name IMAP_UPGRADE_CUSTOM
-## @loc None
-5026=Zvolte si prosím, které složky chcete přihlásit v okně Přihlásit k odběru…
-
-## @name IMAP_UPGRADE_SUCCESSFUL
-## @loc None
-5028=Aktualizace byla úspěšná.
-
 ## @name IMAP_GETTING_ACL_FOR_FOLDER
 ## @loc None
 # LOCALIZATION NOTE (Error 5029): Do not translate the word "ACL" below.
@@ -167,20 +153,6 @@
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
 5032=Obsah zprávy bude stažen na požádání.
-
-## @name IMAP_UNABLE_TO_SAVE_MESSAGE
-## @loc None
-# LOCALIZATION NOTE (Error 5033): Do not translate the word "IMAP" below.
-5033=IMAP chyba: Zprávu nelze kvůli chybě uložit.
-
-## @name IMAP_NO_ONLINE_FOLDER
-## @loc None
-# LOCALIZATION NOTE (Error 5034): Do not translate the word "IMAP" below.
-5034=IMAP chyba: Nelze načíst informace o online složce.
-
-## @name IMAP_LOGIN_FAILED
-## @loc None
-5035=Přihlášení k serveru %S selhalo.
 
 ## @name IMAP_RECEIVING_MESSAGE_HEADERS_OF
 ## @loc None
@@ -227,12 +199,6 @@
 # LOCALIZATION NOTE (Error 5043): Do not translate the word "%S" below.
 # Place the word %S in your translation where the name of the folder should appear.
 5043=Kopírování zprávy do složky %S…
-
-## @name IMAP_SELECTING_MAILBOX
-## @loc None
-# LOCALIZATION NOTE (Error 5044): Do not translate the word "%S" below.
-# Place the word %S in your translation where the name of the folder should appear.
-5044=Otevírání složky %S…
 
 ## @name IMAP_FOLDER_RECEIVING_MESSAGE_OF
 ## @loc None
@@ -380,10 +346,6 @@
 ## @loc None
 5082=Spravovat složku
 
-## @name IMAP_UNKNOWN_USER
-## @loc None
-5083=Neznámá
-
 ## @name IMAP_SERVER_DOESNT_SUPPORT_ACL
 ## @loc None
 5084=Server nepodporuje sdílené složky.
@@ -395,10 +357,6 @@
 ## @name IMAP_SERVER_DISCONNECTED
 ## @loc None
 5090=Server %S byl odpojen. Buď nefunguje server nebo je problém v síťovém spojení.
-
-## @name IMAP_REDIRECT_LOGIN_FAILED
-## @loc None
-5091=Přihlášení selhalo.
 
 # LOCALIZATION NOTE (autoSubscribeText): %1$S is the imap folder.
 5092=Chcete se přihlásit k odběru složky %1$S?
@@ -438,10 +396,6 @@
 # Place the word %2$S where the total number of messages should appear.
 5103=Kopírování zpráv %1$S z %2$S do složky %3$S
 
-## @name IMAP_LOGIN_DISABLED
-## @loc None
-5104=Nemůžete se přihlásit k serveru %S, protože přihlášení odmítl. Zkontrolujte nastavení vašeho poštovního serveru a pokuste se připojit pomocí SSL nebo TLS.
-
 ## @name IMAP_MOVE_FOLDER_TO_TRASH
 ## @loc None
 # LOCALIZATION NOTE (5105): Do not translate the word %S below.
@@ -461,3 +415,10 @@
 ## @name IMAP_DELETE_FOLDER_BUTTON_LABEL
 ## @loc None
 5108=&Smazat složku
+
+## @name IMAP_LOGIN_DISABLED
+## @loc None
+# LOCALIZATION NOTE (5109): %S is the server address
+5109=Nemůžete se přihlásit k serveru %S, protože nepodporuje přihlášení prostým heslem bez podpory STARTTLS či SSL/TLS. Zkuste v nastavení účtu povolit bezpečné připojení nebo přihlášení.
+
+
