--- a/cs/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/cs/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -280,10 +280,12 @@ subjectEmptyMessage=Odesílaná zpráva nemá zadaný žádný předmět.
 sendWithEmptySubjectButton=&Odeslat bez předmětu
 cancelSendingButton=&Zrušit odesílání
 
-## String used by the dialog that informs the user about the newsgroup recipient
+## Strings used by the dialog that informs about lack of newsgroup support.
+noNewsgroupSupportTitle=Není podpora diskusních skupin
 recipientDlogMessage=Tento účet podporuje pouze e-mail. Při pokračování budou ignorovány diskusní skupiny.
 
 #String used by the alert that tells the user an e-mail address is invalid
+addressInvalidTitle=Neplatná adresa příjemce
 addressInvalid=%1$S není platná e-mailová adresa, protože není ve formátu uživatel@server. Před odesláním e-mailu ji musíte opravit.
 ## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle=Zadejte prosím cestu pro přílohu
