--- a/cs/calendar/chrome/calendar/calendar-alarms.properties
+++ b/cs/calendar/chrome/calendar/calendar-alarms.properties
@@ -56,5 +56,13 @@ reminderCustomOriginBeginAfterTask=po začátku úkolu
 reminderCustomOriginEndBeforeTask=před koncem úkolu
 reminderCustomOriginEndAfterTask=po konci úkolu
 
-reminderErrorMaxCountReachedEventN=Zvolený kalendář má omezení #1 upozornění na událost.;Zvolený kalendář má omezení #1 upozornění na událost.;Zvolený kalendář má omezení #1 upozornění na událost.
-reminderErrorMaxCountReachedTaskN=Zvolený kalendář má omezení #1 upozornění na úkol.;Zvolený kalendář má omezení #1 upozornění na úkol.;Zvolený kalendář má omezení #1 upozornění na úkol.
+# Sorry about this, but the reminder dialog possibly needs to support changing the
+# order of its elements for some locales. This needs to be done in a different
+# bug. Please comment in bug XXX what your needs are.
+reminderDialogOriginBeginEvent=začátek události
+reminderDialogOriginEndEvent=konec události
+reminderDialogOriginBeginTask=začátek úkolu
+reminderDialogOriginEndTask=konec úkolu
+
+reminderErrorMaxCountReachedEvent=Zvolený kalendář má omezení #1 upozornění na událost.;Zvolený kalendář má omezení #1 upozornění na událost.;Zvolený kalendář má omezení #1 upozornění na událost.
+reminderErrorMaxCountReachedTask=Zvolený kalendář má omezení #1 upozornění na úkol.;Zvolený kalendář má omezení #1 upozornění na úkol.;Zvolený kalendář má omezení #1 upozornění na úkol.
