--- a/fr/mail/chrome/messenger/comm4xMailImportMsgs.properties
+++ b/fr/mail/chrome/messenger/comm4xMailImportMsgs.properties
@@ -47,7 +47,7 @@
 # Please translate using the brandname in respective languages for Netscape Communicator 4 releases.
 ## @name COMM4XMAILIMPORT_DESCRIPTION
 ## @loc None
-2001=Importer le courrier local de Communicator 4.x.
+2001=Importer les courriers locaux à partir de Communicator 4.x.
 
 # Success Message
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
@@ -58,10 +58,10 @@
 # Error Message
 ## @name COMM4XMAILIMPORT_MAILBOX_BADPARAM
 ## @loc None
-2003=Une erreur interne est survenue : l'importation a échoué. Veuillez essayer à nouveau.
+2003=Une erreur interne est survenue. L'importation a échoué. Veuillez essayer à nouveau.
 
 # Error message
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
 ## @name COMM4XMAILIMPORT_MAILBOX_CONVERTERROR
 ## @loc None
-2004=Une erreur est survenue lors de l'importation de messages de %S. Les messages n'ont pas été importés. Libérez de l'espace disque et essayez à nouveau.
+2004=Une erreur est survenue lors de l'importation des messages à partir %S. Les messages n'ont pas été importés. Libérez de l'espace disque et essayez à nouveau.
