--- a/fr/mail/chrome/messenger/importMsgs.properties
+++ b/fr/mail/chrome/messenger/importMsgs.properties
@@ -51,7 +51,7 @@
 # Error: Unable to create the import thread
 ## @name IMPORT_ERROR_AB_NOTHREAD
 ## @loc None
-2002=Impossible d'importer les carnets d'adresses : création du thread d'importation impossible
+2002=Impossible d'importer les carnets d'adresses : création du fil d'importation impossible
 
 # Error: Unable to create the import thread
 ## @name IMPORT_ERROR_GETABOOK
@@ -72,7 +72,7 @@
 # Error: Unable to create the import thread
 ## @name IMPORT_ERROR_MB_NOTHREAD
 ## @loc None
-2006=Impossible d'importer la boîte aux lettres : création du thread d'importation impossible
+2006=Impossible d'importer la boîte aux lettres : création du fil d'importation impossible
 
 # Error: Unable to create the proxy object for importing mailboxes
 ## @name IMPORT_ERROR_MB_NOPROXY
@@ -231,12 +231,12 @@
 # Description: Address book field name
 ## @name IMPORT_FIELD_DESC
 ## @loc None
-2126=Page Web 1
+2126=Site Web 1
 
 # Description: Address book field name
 ## @name IMPORT_FIELD_DESC
 ## @loc None
-2127=Page Web 2
+2127=Site Web 2
 
 # Description: Address book field name
 ## @name IMPORT_FIELD_DESC
@@ -291,7 +291,7 @@ ImportSettingsBadModule=Impossible de charger le module des paramètres
 ImportSettingsNotFound=Impossible de trouver les paramètres. Vérifiez que cette application est installée sur votre machine.
 ImportSettingsFailed=Erreur lors de l'importation des paramètres. Certains, sinon la totalité, des paramètres risquent de ne pas avoir été importés.
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-ImportSettingsSuccess=Les paramètres ont été importés depuis %S
+ImportSettingsSuccess=Les paramètres ont été importés à partir de %S
 
 #Error string for mail import
 ImportMailBadModule=Impossible de charger le module d'importation du courrier.
@@ -306,12 +306,12 @@ ImportMailSuccess=Le courrier a été importé avec succès à partir de %S
 ImportAddressBadModule=Impossible de charger le module d'importation des carnets d'adresses.
 ImportAddressNotFound=Impossible de trouver un carnet d'adresses à importer. Vérifiez que l'application ou le format est correctement installé sur cette machine.
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-ImportAddressFailed=Erreur lors de l'importation d'adresses depuis %S.
+ImportAddressFailed=Erreur lors de l'importation d'adresses à partir de %S.
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-ImportAddressSuccess=Des adresses ont été correctement importées depuis %S.
+ImportAddressSuccess=Des adresses ont été correctement importées à partir de %S.
 
 # Error string for filters import
-ImportFiltersBadModule=Impossible de charger le module d'import des filtres.
+ImportFiltersBadModule=Impossible de charger le module d'importation des filtres.
 # LOCALIZATION NOTE : The %S will get replaced by the name of the import module.
 ImportFiltersFailed=Une erreur est survenue lors de l'importation des filtres de « %S ».
 # LOCALIZATION NOTE : The %S will get replaced by the name of the import module.
@@ -321,9 +321,9 @@ ImportFiltersPartial=Filtres partiellement importés à partir de « %S ». Vo
 
 #Progress strings
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-MailProgressMeterText=Conversion de boîtes aux lettres depuis %S
+MailProgressMeterText=Conversion de boîtes aux lettres à partir de %S
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
-AddrProgressMeterText=Conversion des carnets d'adresses depuis %S
+AddrProgressMeterText=Conversion des carnets d'adresses à partir de %S
 
 #Import file dialog strings
 ImportSelectSettings=Sélectionnez le fichier des paramètres
