--- a/fr/mail/chrome/messenger/textImportMsgs.properties
+++ b/fr/mail/chrome/messenger/textImportMsgs.properties
@@ -42,12 +42,12 @@
 # Short name of import module
 ## @name TEXTIMPORT_NAME
 ## @loc None
-2000=Texte
+2000=Fichier texte (LDIF, .tab, .csv, .txt)
 
 # Description of import module
 ## @name TEXTIMPORT_DESCRIPTION
 ## @loc None
-2001=Carnet d'adresses sous forme de fichier texte. Les formats LDIF (.ldif, .ldi), séparé par virgules (.csv) ou tabulations (.tab, .txt) sont acceptés.
+2001=Importer un carnet d'adresses sous forme de fichier texte. Les formats LDIF (.ldif, .ldi), séparé par virgules (.csv) ou tabulations (.tab, .txt) sont acceptés.
 
 # Description of import module
 ## @name TEXTIMPORT_ADDRESS_NAME
@@ -72,4 +72,4 @@
 # Error message
 ## @name TEXTIMPORT_ADDRESS_CONVERTERROR
 ## @loc None
-2006=Erreur lors de l'importation du carnet d'adresses %S, certaines adresses peuvent ne pas avoir été importées.
+2006=Erreur lors de l'importation de votre carnet d'adresses %S : certaines adresses risquent de ne pas avoir été récupérées lors de cette opération.
