--- a/fr/suite/chrome/mailnews/appleMailImportMsgs.properties
+++ b/fr/suite/chrome/mailnews/appleMailImportMsgs.properties
@@ -60,4 +60,4 @@
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
 ## @name APPLEMAILIMPORT_MAILBOX_CONVERTERROR
 ## @loc None
-2004=Une erreur est survenue lors de l'importation des messages à partir de %S. Les messages n'ont pas été importés.
+2004=Une erreur est survenue lors de l'importation des messages à partir de %S. Les messages n'ont pas été importés. Libérez de l'espace disque et essayez à nouveau.
