--- a/id/mail/chrome/messenger/search-attributes.properties
+++ b/id/mail/chrome/messenger/search-attributes.properties
@@ -34,3 +34,4 @@ AttachmentStatus = Status Lampiran
 JunkStatus = Status Junk 
 Label = Label
 Customize = Suka-suka…
+MissingCustomTerm=Tidak Ada Kata Kunci Pencarian Suka-suka
