l10n for bug 495519 again - allow extensions to add custom search terms

--- a/pl/mail/chrome/messenger/filter.properties
+++ b/pl/mail/chrome/messenger/filter.properties
@@ -17,8 +17,8 @@ stopButtonLabel                 = Zatrzymaj
 continueButtonLabel             = Kontynuuj
 cannotEnableFilter              = Ten filtr został prawdopodobnie stworzony w innej wersji Mozilli lub Netscape. Nie można włączyć tego filtru ponieważ nie wiadomo jak go zastosować
 dontWarnAboutDeleteCheckbox     = Nie pytaj ponownie
-searchTermsInvalidTitle         = Nieprawidłowe operatory wyszukiwania
-searchTermsInvalidMessage       = Ten filtr nie może zostać zapisany ponieważ niektóre jego operatory są nieprawidłowe w tym kontekście.
+searchTermsInvalidTitle         = Nieprawidłowe atrybuty wyszukiwania
+searchTermsInvalidMessage       = Ten filtr nie może zostać zapisany ponieważ niektóre jego atrybuty są nieprawidłowe w tym kontekście.
 
 # %1$S=author, %2$S=subject, %3$S=date
 junkLogDetectStr          = Wykryto niechcianą wiadomość od %1$S - %2$S, wysłana %3$S
