--- a/pl/mail/chrome/messenger/search-attributes.properties
+++ b/pl/mail/chrome/messenger/search-attributes.properties
@@ -36,4 +36,4 @@ AttachmentStatus=Status załącznika
 JunkStatus=Status niechcianej poczty
 Label=Etykieta
 Customize=Dostosuj…
-MissingCustomTerm=Brakujący operator
+MissingCustomTerm=Brakujący atrybut
