Bug 495519 - Allow extensions to add custom search terms

--- a/fr/mail/chrome/messenger/filter.properties
+++ b/fr/mail/chrome/messenger/filter.properties
@@ -17,6 +17,8 @@ stopButtonLabel=Arrêter
 continueButtonLabel=Continuer
 cannotEnableFilter=Ce filtre a probablement été créé par une version postérieure de mozilla/netscape. Vous ne pouvez activer ce filtre car Mozilla ne sait pas comment l'appliquer.
 dontWarnAboutDeleteCheckbox=Ne plus redemander
+searchTermsInvalidTitle=Termes recherchés invalides
+searchTermsInvalidMessage=Ce filtre ne peut pas être enregistré car certains des termes recherchés ne sont pas valides dans le contecte actuel.
 
 # for junk mail logging / mail filter logging
 # LOCALIZATION NOTE(junkLogDetectStr)
