--- a/fr/suite/chrome/mailnews/search-attributes.properties
+++ b/fr/suite/chrome/mailnews/search-attributes.properties
@@ -38,3 +38,4 @@ AttachmentStatus=Statut des pièces jointes
 JunkStatus=Statut indésirable
 Label=Étiquette
 Customize=Personnaliser…
+MissingCustomTerm=Terme personnalisé manquant
