L10n for: Bug 495519 - "Allow extensions to add custom search terms"

--- a/pl/suite/chrome/mailnews/filter.properties
+++ b/pl/suite/chrome/mailnews/filter.properties
@@ -16,6 +16,8 @@ promptMsg=Trwa filtrowanie wiadomości.\nCzy na pewno kontynuować uruchamianie 
 stopButtonLabel=Zatrzymaj
 continueButtonLabel=Kontynuuj
 cannotEnableFilter=Ten filtr został prawdopodobnie stworzony w nowszej wersji tego programu. Nie można włączyć tego filtru ponieważ nie wiadomo jak go zastosować
+searchTermsInvalidTitle=Nieprawidłowe atrybuty wyszukiwania
+searchTermsInvalidMessage=Ten filtr nie może zostać zapisany ponieważ niektóre jego atrybuty są nieprawidłowe w tym kontekście.
 
 # for junk mail logging / mail filter logging
 # LOCALIZATION NOTE(junkLogDetectStr)
