--- a/pl/suite/chrome/mailnews/search-attributes.properties
+++ b/pl/suite/chrome/mailnews/search-attributes.properties
@@ -38,3 +38,4 @@ AttachmentStatus=Status załącznika
 JunkStatus=Status niechcianej poczty
 Label=Etykieta
 Customize=Dostosuj…
+MissingCustomTerm=Brakujący atrybut
