L10n for: Bug 490464 Update the download pref pane for use with toolkit download manager

--- a/pl/suite/chrome/common/pref/prefutilities.properties
+++ b/pl/suite/chrome/common/pref/prefutilities.properties
@@ -1,6 +1,8 @@
 cachefolder=Wybierz katalog pamięci podręcznej
 choosehomepage=Wybierz stronę domową
 downloadfolder=Wybierz folder pobierania
+desktopFolderName=Pulpit
+downloadsFolderName=Pobieranie
 choosesound=Wybierz dźwięk
 
 SoundFiles=Dźwięki
