--- a/cs/mail/chrome/messenger/filter.properties
+++ b/cs/mail/chrome/messenger/filter.properties
@@ -17,6 +17,8 @@ stopButtonLabel=Zastavit
 continueButtonLabel=Pokračovat
 cannotEnableFilter=Tento filtr byl pravděpodobně vytvořen v nesprávné verzi aplikace Mozilla/Netscape. Není možné jej povolit, protože ho nelze použít.
 dontWarnAboutDeleteCheckbox=Příště se již neptat
+searchTermsInvalidTitle=Neplatný hledací výraz
+searchTermsInvalidMessage=Tento filtr nelze uložit, neboť některý z hledacích výrazů je v aktuálním kontextu neplatný.
 
 # for junk mail logging / mail filter logging
 # LOCALIZATION NOTE(junkLogDetectStr)
