better downloading items status messages

--- a/pl/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/pl/mail/chrome/messenger-newsblog/newsblog.properties
@@ -20,14 +20,12 @@ subscribe-confirmFeedDeletionTitle = Usuń kanał
 subscribe-confirmFeedDeletion      = Czy na pewno zrezygnować z subskrypcji kanału: \n %S?
 
 # first %S is the number of articles processed so far; second %S is the total number of items
-subscribe-gettingFeedItems    = Pobieranie artykułów aktualności (%S z %S)…
+subscribe-gettingFeedItems    = Pobieranie artykułów (%S z %S)…
 
 newsblog-noNewArticlesForFeed = Nie ma nowych artykułów dla tego źródła.
 newsblog-networkErrorTitle    = Błąd połączenia sieciowego
 # %S is the feed URL
 newsblog-networkError         = Odnalezienie %S było niemożliwe. Sprawdź poprawność nazwy, a następnie spróbuj ponownie.
-
 newsblog-feedNotValidTitle = Błędne źródło
-# %S is the feed URL
 newsblog-feedNotValid      = %S nie jest poprawnym źródłem aktualności.
 newsblog-getNewMsgsCheck   = Sprawdzanie, czy źródła zawierają nowe artykuły…
