--- a/sv-SE/mail/chrome/messenger/filter.properties
+++ b/sv-SE/mail/chrome/messenger/filter.properties
@@ -47,6 +47,8 @@ stopButtonLabel=Avbryt
 continueButtonLabel=Fortsätt
 cannotEnableFilter=Detta filter skapades troligen av en tidigare version av Mozilla/Netscape. Du kan inte använda detta filter därför att vi inte vet hur det ska användas.
 dontWarnAboutDeleteCheckbox=Fråga mig inte igen
+searchTermsInvalidTitle=Ogiltiga söktermer
+searchTermsInvalidMessage=Det här filtret kan inte sparas eftersom vissa söktermer inte är giltiga i det aktuella sammanhanget.
 
 # for junk mail logging / mail filter logging
 # LOCALIZATION NOTE(junkLogDetectStr)
