--- a/nb-NO/mail/chrome/messenger/filter.properties
+++ b/nb-NO/mail/chrome/messenger/filter.properties
@@ -17,6 +17,8 @@ stopButtonLabel=Stopp
 continueButtonLabel=Fortsett
 cannotEnableFilter=Dette filteret ble trolig opprettet av en fremtidig versjon av mozilla/netscape. Du kan ikke slå på dette filteret, fordi programmet vet ikke hvordan det skal behandles.
 dontWarnAboutDeleteCheckbox=Ikke spør meg om dette igjen
+searchTermsInvalidTitle=Søkeordene er ugyldige
+searchTermsInvalidMessage=Dette filteret kan ikke lagres fordi noen søketermer er ugyldige i denne konteksten.
 
 # for junk mail logging / mail filter logging
 # LOCALIZATION NOTE(junkLogDetectStr)
