Harmonization between suite and others apps - The Revenge

--- a/fr/mail/chrome/messenger/search.properties
+++ b/fr/mail/chrome/messenger/search.properties
@@ -14,9 +14,9 @@ searchingMessage=Recherche en cours…
 searchSuccessMessage=Une occurrence trouvée
 searchSuccessMessages=%S occurrences trouvées
 searchFailureMessage=Aucune occurrence trouvée
-labelForStopButton=Stop
+labelForStopButton=Arrêter
 labelForSearchButton=Rechercher
-labelForStopButton.accesskey=S
+labelForStopButton.accesskey=A
 labelForSearchButton.accesskey=R
 
 moreButtonTooltipText=Ajouter une nouvelle règle
