Aviary.pl bug 2546 - reword 5109@imapMsgs.properties

--- a/pl/mail/chrome/messenger/imapMsgs.properties
+++ b/pl/mail/chrome/messenger/imapMsgs.properties
@@ -128,4 +128,4 @@ imapLoginFailedEnterNewPasswordButton = &Wprowadź nowe hasło
 5107=Usuń Folder
 5108=&Usuń folder
 
-5109=Nie ma możliwości zalogowania się do %S, ponieważ serwer nie pozwala na logowanie bez szyfrowania STARTTLS lub SSL/TLS. Proszę spróbować włączyć bezpieczne uwierzytelnianie lub szyfrowanie połączenia w Konfiguracji kont (kategoria Konfiguracja serwera).
+5109=Nie ma możliwości zalogowania się do %S, ponieważ serwer nie zezwala na logowanie bez szyfrowania STARTTLS lub SSL/TLS. Proszę spróbować włączyć bezpieczne uwierzytelnianie lub szyfrowanie połączenia w Konfiguracji kont (kategoria Konfiguracja serwera).
