Fixing typos in last harmonization commit

--- a/fr/mail/chrome/messenger/importMsgs.properties
+++ b/fr/mail/chrome/messenger/importMsgs.properties
@@ -41,7 +41,7 @@
 # Success message when no address books are found to import
 ## @name IMPORT_NO_ADDRBOOKS
 ## @loc None
-2000=Pas de carnet d'adresses à importer
+2000=Aucun carnet d'adresses à importer
 
 # Error: Address book import not intialized
 ## @name IMPORT_ERROR_AB_NOTINITIALIZED
